pkglib_LTLIBRARIES = HwExsample2.la
HwExsample2_la_LDFLAGS = -module -version-info 11:1:0
HwExsample2_la_SOURCES = \
GeneralStatistics.h GeneralStatistics.cc \
BinnedStatistics.h BinnedStatistics.cc \
MultiIterationStatistics.h MultiIterationStatistics.cc \
BinSampler.h BinSampler.cc \
ProjectingSampler.h ProjectingSampler.cc \
GeneralSampler.h GeneralSampler.cc \
ExSampler2.h ExSampler2.cc
