noinst_LTLIBRARIES = libHwHadronization.la
libHwHadronization_la_SOURCES = \
CluHadConfig.h \
Cluster.h Cluster.cc Cluster.fh \
ClusterDecayer.cc ClusterDecayer.h ClusterDecayer.fh \
ClusterFinder.cc ClusterFinder.h ClusterFinder.fh  \
ClusterFissioner.cc ClusterFissioner.h ClusterFissioner.fh \
ClusterHadronizationHandler.cc ClusterHadronizationHandler.h \
ClusterHadronizationHandler.fh \
ColourReconnector.cc ColourReconnector.h ColourReconnector.fh \
DynamicGluonMassGenerator.h DynamicGluonMassGenerator.cc \
DynamicPartonSplitter.h DynamicPartonSplitter.cc \
GluonMassGenerator.h GluonMassGenerator.cc \
Hw64Selector.cc Hw64Selector.h \
HwppSelector.cc HwppSelector.h \
Hw7Selector.cc Hw7Selector.h \
LightClusterDecayer.cc LightClusterDecayer.h LightClusterDecayer.fh \
PartonSplitter.cc PartonSplitter.h PartonSplitter.fh \
SpinHadronizer.h SpinHadronizer.cc \
HadronSpectrum.h HadronSpectrum.fh HadronSpectrum.cc \
StandardModelHadronSpectrum.h StandardModelHadronSpectrum.cc

