SUBDIRS = General Lepton Hadron DIS Powheg

noinst_LTLIBRARIES = libHwME.la 

libHwME_la_SOURCES =  \
HwME2to2Base.h HwME2to2Base.icc HwME2to2Base.cc \
ME2to4Base.h ME2to4Base.cc \
MEfftoVH.h MEfftoVH.cc \
MEfftoffH.h MEfftoffH.icc MEfftoffH.cc \
HardVertex.fh HardVertex.h HardVertex.cc \
ProductionMatrixElement.h ProductionMatrixElement.icc ProductionMatrixElement.cc