SUBDIRS = General Lepton Hadron DIS Powheg Gamma Matchbox Reweighters

noinst_LTLIBRARIES = libHwME.la 

libHwME_la_SOURCES =  \
HwMEBase.h HwMEBase.fh HwMEBase.cc \
MEfftoVH.h MEfftoVH.cc \
MEfftoffH.h MEfftoffH.cc \
HardVertex.fh HardVertex.h HardVertex.cc \
ProductionMatrixElement.h ProductionMatrixElement.cc \
DrellYanBase.h DrellYanBase.cc
