## libPDT.la will go into libHwDecay.so
## libHwBaryonWidth.la goes into HwBaryonDecay.so
noinst_LTLIBRARIES = libHwPDT.la libHwBaryonWidth.la
libHwPDT_la_SOURCES = \
GenericMassGenerator.cc GenericMassGenerator.fh \
GenericMassGenerator.h GenericMassGenerator.icc \
GenericWidthGenerator.cc GenericWidthGenerator.fh \
GenericWidthGenerator.h GenericWidthGenerator.icc \
OneOffShellCalculator.cc OneOffShellCalculator.fh \
OneOffShellCalculator.h OneOffShellCalculator.icc \
ScalarMassGenerator.cc ScalarMassGenerator.fh \
ScalarMassGenerator.h ScalarMassGenerator.icc \
ThreeBodyAllOn1IntegralCalculator.tcc \
ThreeBodyAllOn1IntegralCalculator.h ThreeBodyAllOn1IntegralCalculator.icc \
ThreeBodyAllOnCalculator.tcc \
ThreeBodyAllOnCalculator.h ThreeBodyAllOnCalculator.icc \
TwoBodyAllOnCalculator.cc TwoBodyAllOnCalculator.fh \
TwoBodyAllOnCalculator.h TwoBodyAllOnCalculator.icc \
TwoOffShellCalculator.cc TwoOffShellCalculator.fh \
TwoOffShellCalculator.h TwoOffShellCalculator.icc \
WidthCalculatorBase.cc WidthCalculatorBase.fh \
WidthCalculatorBase.h WidthCalculatorBase.icc \
StandardMatchers.h StandardMatchers.cc \
SMHiggsWidthGenerator.cc SMHiggsWidthGenerator.fh \
SMHiggsWidthGenerator.h SMHiggsWidthGenerator.icc


libHwBaryonWidth_la_SOURCES = \
BaryonWidthGenerator.cc BaryonWidthGenerator.fh \
BaryonWidthGenerator.h BaryonWidthGenerator.icc
