## libHwPDT.la will go into libHwDecay.so

noinst_LTLIBRARIES = libHwPDT.la libHwBaryonWidth.la
libHwPDT_la_SOURCES = \
GenericMassGenerator.cc GenericMassGenerator.fh \
GenericMassGenerator.h \
GenericWidthGenerator.cc GenericWidthGenerator.fh \
GenericWidthGenerator.h \
OneOffShellCalculator.cc OneOffShellCalculator.fh \
OneOffShellCalculator.h \
ScalarMassGenerator.cc ScalarMassGenerator.fh \
ScalarMassGenerator.h \
ThreeBodyAllOn1IntegralCalculator.tcc \
ThreeBodyAllOn1IntegralCalculator.h \
ThreeBodyAllOnCalculator.tcc \
ThreeBodyAllOnCalculator.h \
TwoBodyAllOnCalculator.cc TwoBodyAllOnCalculator.fh \
TwoBodyAllOnCalculator.h \
TwoOffShellCalculator.cc TwoOffShellCalculator.fh \
TwoOffShellCalculator.h \
WidthCalculatorBase.cc WidthCalculatorBase.fh \
WidthCalculatorBase.h \
StandardMatchers.h StandardMatchers.cc \
SMHiggsWidthGenerator.cc SMHiggsWidthGenerator.h \
SMHiggsMassGenerator.cc SMHiggsMassGenerator.h 


libHwBaryonWidth_la_SOURCES = \
BaryonWidthGenerator.cc BaryonWidthGenerator.fh \
BaryonWidthGenerator.h
